# lightkurve-dataset

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py  serve.py
artifacts/: lightgbm_oof.npz
cli/: predict.py
configs/: vetting.yaml
data/metadata/: catalog.csv
data/splits/: holdout_star42.json
models/: lightgbm_cal.json  lightgbm_final.features.json  lightgbm_final.labels.json  lightgbm_final.txt
predictions/: pred_10797460.json
reports/: holdout_metrics.json  holdout_probs.npz
scripts/: build_catalog.py  build_report.py  ensemble_blend.py  eval_on_holdout.py  figures.py  generate_mock_lightcurves.py  make_holdout.py  prepare_datasets.py  train_cnn.py  train_lightgbm.py
src/lightkurve_dataset/: __init__.py  config.py  inference.py
src/lightkurve_dataset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lightkurve_dataset/data/: catalog.py  fetch.py
src/lightkurve_dataset/datasets/: __init__.py  cnn.py  lightgbm.py
src/lightkurve_dataset/features/: physical.py
src/lightkurve_dataset/preprocessing/: cleaning.py  phase.py  pipeline.py
src/lightkurve_dataset/utils/: logging.py
